--- a/YouTubeApi/Views/Home/Index.cshtml
+++ b/YouTubeApi/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             ВидеоМенеджер
         </h1>
 
-        <button onclick="toggleAuthOptions()" style="
+@*         <button onclick="toggleAuthOptions()" style="
             position: absolute;
             right: 0;
             padding: 8px 16px;
@@ -40,7 +40,7 @@
             transition: background-color 0.2s ease-in-out;
         " onmouseover="this.style.backgroundColor='#d32f2f'" onmouseout="this.style.backgroundColor='#e53935'">
             Регистрация
-        </button>
+        </button> *@
     </div>
     <p style="
         margin-top: 8px;
@@ -56,15 +56,15 @@
         <button onclick="showForm('signup')" class="auth-toggle">Sign Up</button>
     </div>
 
-    <div id="loginForm" style="display: none; margin-top: 20px;">
+@*     <div id="loginForm" style="display: none; margin-top: 20px;">
         <form method="post" asp-controller="Account" asp-action="Login" style="display: flex; flex-direction: column; gap: 10px; max-width: 400px; margin: 0 auto;">
             <input type="text" name="login" placeholder="Логин" required class="input-field" />
             <input type="password" name="password" placeholder="Пароль" required class="input-field" />
             <button type="submit" class="yt-button">Войти</button>
         </form>
-    </div>
+    </div> *@
 
-    <div id="signupForm" style="display: none; margin-top: 20px;">
+@*     <div id="signupForm" style="display: none; margin-top: 20px;">
         <form method="post" asp-controller="Account" asp-action="register" 
             style="display: flex; flex-direction: column; gap: 10px; max-width: 400px; margin: 0 auto;">
             <input type="text" name="login" placeholder="Логин" required class="input-field" />
@@ -72,10 +72,10 @@
             <input type="email" name="email" placeholder="Email" required class="input-field" />
             <button type="submit" class="yt-button">Зарегистрироваться</button>
         </form>
-    </div>
+    </div> *@
 </header>
 
-<style>
+@* <style>
     .auth-toggle {
         margin: 0 5px;
         padding: 8px 16px;
@@ -87,7 +87,6 @@
         cursor: pointer;
         transition: background-color 0.2s ease-in-out;
     }
-
         .auth-toggle:hover {
             background-color: #d32f2f;
         }
@@ -107,7 +106,7 @@
         document.getElementById("loginForm").style.display = type === "login" ? "block" : "none";
         document.getElementById("signupForm").style.display = type === "signup" ? "block" : "none";
     }
-</script>
+</script> *@
 
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
