--- a/YouTubeApi/Views/Home/Auth.cshtml
+++ b/YouTubeApi/Views/Home/Auth.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<YouTubeApi.Models.User>
+﻿@* @model List<YouTubeApi.Models.User>
 
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh;">
     <h2>Добро пожаловать</h2>
@@ -117,3 +117,4 @@
 
 
 
+ *@
